deploy/HostedPCI/objects/Token__c.object
<CustomObject>
    <fields>
        <fullName>cardType__c</fullName>
        <label>Card Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccNum__c</fullName>
        <description>Token</description>
        <externalId>true</externalId>
        <label>Card Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>expiryMonth__c</fullName>
        <label>Expiry Month</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiryYear__c</fullName>
        <label>Expiry Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>First Name:</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>Last Name:</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Token</label>
    <nameField>
        <label>Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>